[package]
name = "bls-sig"
version = "0.1.0"
edition = "2024"

description = "A command-line tool for BLS signature operations (keygen, pubkey, sign, verify)."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sidx04/bls-sig"
repository = "https://github.com/sidx04/bls-sig"
keywords = ["bls", "signature", "cryptography", "cli", "elliptic-curve"]
categories = ["command-line-utilities", "cryptography", "authentication"]
authors = ["sidx04 <siddpal04@gmail.com>"]


[dependencies]
anyhow = "1.0.98"
ark-bls12-381 = { version = "0.5.0", features = ["std"] }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4.3"
hkdf = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"

[[bin]]
name = "bls-sig"
path = "src/main.rs"
